Fixing the problem with visible blur partition line.

--- a/MUSIC_INSTRUMENT_SHOP/src/index.scss
+++ b/MUSIC_INSTRUMENT_SHOP/src/index.scss
@@ -18,6 +18,7 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
@@ -33,9 +34,11 @@ body {
     color: #213547;
     background-color: #ffffff;
   }
+
   a:hover {
     color: #747bff;
   }
+
   button {
     background-color: #f9f9f9;
   }
@@ -48,12 +51,12 @@ body {
 }
 
 .main_menu ul {
-display: flex;
-flex-direction: row;
-gap: 0rem;
-list-style-type: none;
-background-color: #6c6e90;
-padding-left: 0;
+  display: flex;
+  flex-direction: row;
+  gap: 0rem;
+  list-style-type: none;
+  background-color: #6c6e90;
+  padding-left: 0;
 }
 
 .main_menu ul .link {
@@ -103,13 +106,15 @@ h1 {
   width: 14%;
   height: 100%;
   background: inherit;
-  overflow: hidden;
+  overflow: visible;
+
 }
 
 .headstrip .left_subimage_container .headstrip_subimage.left_subimage {
   width: 100%;
-      height: 100%;
-      object-fit: cover;
+  height: 100%;
+  object-fit: cover;
+  border-right: 1px solid green;
 }
 
 .headstrip .left_subimage_container::after {
@@ -117,9 +122,11 @@ h1 {
   position: absolute;
   top: -20%;
   right: -10%;
-  width: 20%; /* Adjust width for the blurry side */
+  width: 20%;
+  /* Adjust width for the blurry side */
   height: 140%;
-  background: inherit; /* Copy the background from the container */
+  background: inherit;
+  /* Copy the background from the container */
   filter: blur(8px);
 }
 
@@ -141,37 +148,35 @@ h1 {
   font-weight: 700;
 }
 
-.headstrip .right_subimage {
-  width: 12%;
+.headstrip .right_subimage_container {
+  position: relative;
+  width: 14%;
+  height: 100%;
+  background: inherit;
+  overflow: visible;
+}
+
+.headstrip .right_subimage_container .headstrip_subimage.right_subimage {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.headstrip .right_subimage_container::after {
+  content: '';
+  position: absolute;
+  top: -20%;
+  left: -10%;
+  width: 20%;
+  /* Adjust width for the blurry side */
+  height: 160%;
+  background: inherit;
+  /* Copy the background from the container */
+  filter: blur(8px);
 }
 
 .buy_bestsellers {
   height: 70%;
   border-radius: 5rem;
   align-self: center;
-}
-
-.image-container {
-  position: relative;
-  background-color: #535bf2;
-  width: 300px;
-  height: 200px;
-  overflow: hidden;
-}
-
-.image-container img {
-  width: 80%;
-      height: 100%;
-      object-fit: cover;
-}
-
-.image-container::after {
-  content: '';
-      position: absolute;
-      top: -20%;
-      right: 0;
-      width: 40%; /* Adjust width for the blurry side */
-      height: 140%;
-      background: inherit; /* Copy the background from the container */
-      filter: blur(20px);
 }
